--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorBackground">#303030</color>
     <color name="colorPrimaryDark">#2E2E2E</color>
     <color name="colorActionBar">#383838</color>
+    <color name="selectorTransparency">#cbffffff</color>
     <color name="navigationBarColor">#B3000000</color>
     <color name="colorError">@color/material_red_700</color>
     <color name="colorNormal">@color/material_green_700</color>
