[app] Add loading indicator to repo

--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -44,6 +44,16 @@
 
     </rikka.material.widget.AppBarLayout>
 
+    <com.google.android.material.progressindicator.LinearProgressIndicator
+        android:id="@+id/progress"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:visibility="gone"
+        app:hideAnimationBehavior="outward"
+        android:layout_marginTop="?actionBarSize"
+        app:layout_fitSystemWindowsInsets="top" />
+
     <rikka.widget.borderview.BorderRecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
