--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -108,7 +108,7 @@
                     android:id="@+id/tgChannelView"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:background="?roundBackground"
+                    android:background="@drawable/item_background"
                     android:clickable="true"
                     android:focusable="true"
                     android:gravity="center"
@@ -137,7 +137,7 @@
                     android:id="@+id/sourceCodeView"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:background="?roundBackground"
+                    android:background="@drawable/item_background"
                     android:clickable="true"
                     android:focusable="true"
                     android:gravity="center"
