--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,108 +18,7 @@
   ~ Copyright (C) 2021 LSPosed Contributors
   -->
 
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
 
     <style name="AppTheme" parent="Theme.Light" />
-
-    <!-- Base application theme. -->
-    <style name="Base.AppTheme.Light" parent="Theme.Material.Light.LightStatusBar">
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-
-        <item name="listItemBackground">@drawable/item_background</item>
-        <item name="roundBackground">@drawable/item_background</item>
-
-        <item name="actionBarStyle">@style/Widget.Material.ActionBar.Surface</item>
-        <item name="actionBarTheme">@style/ThemeOverlay.ActionBar</item>
-        <item name="toolbarStyle">@style/Widget.Material.Toolbar</item>
-
-        <item name="appBarStyle">@style/Widget.AppBar.Surface.Raisable</item>
-
-        <item name="android:windowActionBar">false</item>
-        <item name="android:windowNoTitle">true</item>
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-    </style>
-
-    <style name="Base.AppTheme" parent="Theme.Material">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-
-        <item name="listItemBackground">@drawable/item_background</item>
-        <item name="roundBackground">@drawable/item_background</item>
-
-        <item name="actionBarStyle">@style/Widget.Material.ActionBar.Surface</item>
-        <item name="actionBarTheme">@style/ThemeOverlay.ActionBar</item>
-        <item name="toolbarStyle">@style/Widget.Material.Toolbar</item>
-
-        <item name="appBarStyle">@style/Widget.AppBar.Surface.Raisable</item>
-
-        <item name="android:windowActionBar">false</item>
-        <item name="android:windowNoTitle">true</item>
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-    </style>
-
-    <style name="Theme.Light" parent="Base.AppTheme.Light" />
-
-    <style name="Theme" parent="Base.AppTheme" />
-
-    <style name="Widget.AppBar" parent="">
-        <item name="android:background">?toolbarColor</item>
-        <item name="android:theme">?actionBarTheme</item>
-        <item name="android:stateListAnimator">@animator/raise_animator</item>
-        <item name="android:elevation">2dp</item>
-    </style>
-
-    <style name="Widget.Material.Toolbar" parent="Widget.MaterialComponents.Toolbar">
-        <item name="android:background">?android:colorBackground</item>
-    </style>
-
-    <style name="Widget.AppBar.Surface">
-        <item name="android:background">?android:colorBackground</item>
-        <item name="android:stateListAnimator">@animator/alpha_animator</item>
-        <item name="android:elevation">@dimen/app_bar_elevation</item>
-    </style>
-
-    <style name="Widget.AppBar.Surface.Raisable">
-        <item name="android:elevation">0dp</item>
-        <item name="android:stateListAnimator">@animator/raise_animator</item>
-    </style>
-
-    <style name="ThemeOverlay.ActionBar" parent="ThemeOverlay.MaterialComponents.ActionBar">
-        <item name="elevation">0dp</item>
-        <item name="titleTextAppearance">@android:style/TextAppearance.Material.Widget.Toolbar.Title</item>
-        <item name="subtitleTextAppearance">@android:style/TextAppearance.Material.Widget.Toolbar.Subtitle</item>
-    </style>
-
-    <style name="Widget.App.Button.OutlinedButton.IconOnly" parent="Widget.MaterialComponents.Button.OutlinedButton">
-        <item name="iconPadding">0dp</item>
-        <item name="android:paddingLeft">12dp</item>
-        <item name="android:paddingRight">12dp</item>
-        <item name="android:minWidth">48dp</item>
-    </style>
-
-    <style name="Widget.MaterialComponents.CompoundButton.CheckBox" parent="Widget.AppCompat.CompoundButton.CheckBox" tools:override="true">
-        <item name="enforceMaterialTheme">true</item>
-        <item name="useMaterialThemeColors">true</item>
-    </style>
-
-    <style name="Widget.MaterialComponents.CompoundButton.RadioButton" parent="Widget.AppCompat.CompoundButton.RadioButton" tools:override="true">
-        <item name="enforceMaterialTheme">true</item>
-        <item name="useMaterialThemeColors">true</item>
-    </style>
-
-    <style name="ThemeOverlay" />
-
-    <style name="ThemeOverlay.Black">
-        <item name="colorPrimaryDark">@android:color/black</item>
-        <item name="android:navigationBarColor">@color/navigationBarColorBlack</item>
-        <item name="android:colorBackground">@android:color/black</item>
-        <item name="android:windowBackground">@android:color/black</item>
-        <item name="tabLayoutTheme">@style/Widget.MaterialComponents.TabLayout</item>
-    </style>
 </resources>
