--- a/app/src/main/res/values/themes_overlay.xml
+++ b/app/src/main/res/values/themes_overlay.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ This file is part of LSPosed.
   ~
@@ -18,8 +17,14 @@
   ~ Copyright (C) 2020 EdXposed Contributors
   ~ Copyright (C) 2021 LSPosed Contributors
   -->
-
 <resources>
+
+    <style name="ThemeOverlay" />
+
+    <style name="ThemeOverlay.Black">
+        <item name="android:colorPrimaryDark">@android:color/black</item>
+        <item name="android:colorBackground">@android:color/black</item>
+    </style>
 
     <style name="ThemeOverlay.colorPrimary">
         <item name="colorPrimary">@color/colorPrimary</item>
