--- a/app/src/main/res/layout/activity_logs.xml
+++ b/app/src/main/res/layout/activity_logs.xml
@@ -53,8 +53,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/tab_layout_height"
                 android:background="@android:color/transparent"
-                app:tabMode="fixed"
-                style="?tabLayoutTheme">
+                app:tabMode="fixed">
 
                 <com.google.android.material.tabs.TabItem
                     android:layout_width="wrap_content"
