--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,15 +21,7 @@
 
 <resources>
     <color name="colorPrimary">@color/material_blue_700</color>
-    <color name="colorBackground">#fff</color>
-    <color name="colorPrimaryDark">#fff</color>
     <color name="colorAccent">@color/material_blue_700</color>
-    <color name="colorActionBar">#fff</color>
-    <color name="selectorTransparency">#34ffffff</color>
-    <color name="navigationBarColor">@color/colorPrimary</color>
-    <color name="navigationBarColorBlack">@android:color/black</color>
-    <color name="colorError">@color/material_red_500</color>
-    <color name="colorNormal">@color/material_green_500</color>
-    <color name="colorInstall">@color/material_blue_500</color>
-
+    <color name="rippleTransparency_light">#34ffffff</color>
+    <color name="rippleTransparency_dark">#cbffffff</color>
 </resources>
