[app] Nuke accent color

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ This file is part of LSPosed.
   ~
   ~ LSPosed is free software: you can redistribute it and/or modify
@@ -20,8 +19,10 @@
   -->
 
 <resources>
-    <color name="colorPrimary">@color/material_blue_700</color>
-    <color name="colorAccent">@color/material_blue_700</color>
     <color name="rippleTransparency_light">#34ffffff</color>
     <color name="rippleTransparency_dark">#cbffffff</color>
+
+    <color name="color_primary_light">@color/google_blue_600</color>
+    <color name="color_primary_dark">@color/google_blue_300</color>
+    <color name="color_primary">@color/color_primary_light</color>
 </resources>
