--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -14,16 +14,9 @@
   ~ You should have received a copy of the GNU General Public License
   ~ along with LSPosed.  If not, see <https://www.gnu.org/licenses/>.
   ~
-  ~ Copyright (C) 2020 EdXposed Contributors
   ~ Copyright (C) 2021 LSPosed Contributors
   -->
 
-<paths>
-    <external-cache-path
-        name="downloads"
-        path="/downloads" />
-    <!--suppress AndroidElementNotAllowed -->
-    <root-path
-        name="log"
-        path="/" />
-</paths>
+<resources>
+    <color name="color_primary">@color/color_primary_dark</color>
+</resources>
