--- a/app/src/main/res/values/colors_google.xml
+++ b/app/src/main/res/values/colors_google.xml
@@ -14,16 +14,12 @@
   ~ You should have received a copy of the GNU General Public License
   ~ along with LSPosed.  If not, see <https://www.gnu.org/licenses/>.
   ~
-  ~ Copyright (C) 2020 EdXposed Contributors
   ~ Copyright (C) 2021 LSPosed Contributors
   -->
 
-<paths>
-    <external-cache-path
-        name="downloads"
-        path="/downloads" />
-    <!--suppress AndroidElementNotAllowed -->
-    <root-path
-        name="log"
-        path="/" />
-</paths>
+<!-- @see https://chromium.googlesource.com/chromium/src/+/master/ui/webui/resources/cr_elements/shared_vars_css.html -->
+<resources>
+    <color name="google_blue_600">#1A73E8</color>
+    <color name="google_blue_300">#8AB4F8</color>
+    <color name="google_grey_900">#202124</color>
+</resources>
