--- a/app/src/main/res/drawable-nodpi/shortcut_ic_repo.xml
+++ b/app/src/main/res/drawable-nodpi/shortcut_ic_repo.xml
@@ -1,4 +1,4 @@
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ This file is part of LSPosed.
   ~
   ~ LSPosed is free software: you can redistribute it and/or modify
@@ -14,17 +14,15 @@
   ~ You should have received a copy of the GNU General Public License
   ~ along with LSPosed.  If not, see <https://www.gnu.org/licenses/>.
   ~
-  ~ Copyright (C) 2020 EdXposed Contributors
   ~ Copyright (C) 2021 LSPosed Contributors
   -->
 
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24"
-    android:tint="?attr/colorControlNormal">
-    <path
-        android:fillColor="@color/material_blue_500"
-        android:pathData="M13,5v6h1.17L12,13.17 9.83,11L11,11L11,5h2m2,-2L9,3v6L5,9l7,7 7,-7h-4L15,3zM19,18L5,18v2h14v-2z" />
-</vector>
+<adaptive-icon xmlns:android="http://schemas.android.com/apk/res/android">
+    <background android:drawable="@color/material_grey_100" />
+    <foreground>
+        <!-- 44dp icon scaled to 52dp in 72dp, padding = (1-52/44*24/72)/2 -->
+        <inset
+            android:drawable="@drawable/ic_get_app"
+            android:inset="30.303%" />
+    </foreground>
+</adaptive-icon>
