--- a/app/src/main/res/xml/shortcuts.xml
+++ b/app/src/main/res/xml/shortcuts.xml
@@ -42,4 +42,15 @@
             android:targetClass="io.github.lsposed.manager.ui.activity.LogsActivity"
             android:targetPackage="io.github.lsposed.manager" />
     </shortcut>
+    <shortcut
+        android:enabled="true"
+        android:icon="@drawable/shortcut_ic_repo"
+        android:shortcutId="Repo"
+        android:shortcutLongLabel="@string/module_repo"
+        android:shortcutShortLabel="@string/module_repo">
+        <intent
+            android:action="android.intent.action.MAIN"
+            android:targetClass="io.github.lsposed.manager.ui.activity.RepoActivity"
+            android:targetPackage="io.github.lsposed.manager" />
+    </shortcut>
 </shortcuts>
