[app] Add view in repo for modules

--- a/app/src/main/res/menu/context_menu_modules.xml
+++ b/app/src/main/res/menu/context_menu_modules.xml
@@ -28,6 +28,9 @@
         android:id="@+id/menu_app_store"
         android:title="@string/modules_app_store" />
     <item
+        android:id="@+id/menu_repo"
+        android:title="@string/view_in_repo" />
+    <item
         android:id="@+id/menu_app_info"
         android:title="@string/module_app_info" />
     <item
