[app & key-selector] Deprecate SandHook (#208)
* fix contributor

* Mark SandHook as deprecated

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -33,9 +33,9 @@
         <item>MODE_NIGHT_FOLLOW_SYSTEM</item>
     </string-array>
 
-    <string-array name="variant_texts" translatable="false">
+    <string-array name="variant_texts">
         <item>YAHFA</item>
-        <item>SandHook</item>
+        <item>@string/settings_variant_sandhook</item>
     </string-array>
     <string-array name="variant_values" translatable="false">
         <item>1</item>
