[app] Improve scope list performance

--- a/app/src/main/res/menu/menu_app_list.xml
+++ b/app/src/main/res/menu/menu_app_list.xml
@@ -34,6 +34,12 @@
         app:showAsAction="ifRoom" />
 
     <item
+        android:id="@+id/menu_refresh"
+        android:title="@string/refresh"
+        android:icon="@drawable/ic_refresh"
+        app:showAsAction="ifRoom" />
+
+    <item
         android:id="@+id/use_recommended"
         android:title="@string/use_recommended" />
 
