--- a/app/src/main/res/menu/menu_modules.xml
+++ b/app/src/main/res/menu/menu_modules.xml
@@ -26,4 +26,11 @@
         android:id="@+id/menu_search"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/menu_refresh"
+        android:title="@string/refresh"
+        android:icon="@drawable/ic_refresh"
+        app:showAsAction="ifRoom" />
+
 </menu>
